load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/core/*.hpp",
]

cc_library(
    name = "core_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "core",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":core_internal",
        "@boost//libs/config",
        "@boost//libs/assert",
    ],
)
